dark mode fixes

--- a/src/App.css
+++ b/src/App.css
@@ -191,14 +191,10 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    margin: 0 0 var(--header-height) 0;
-  }
 
   .section {
     padding: 2rem 0 4rem;
     height: fit-content ;
-    margin-top: 2rem;
   }
 
   .section__subtitle {
